# code_agent

./: LICENSE  Makefile  OPENROUTER_TROUBLESHOOTING.md  README.md  SYSTEM_ARCHITECTURE.md  dev_assistant.db  features.txt  fix_asyncio.py  main.py  prompt.md  pyproject.toml  readme.md  requirements.txt  simple_fix.py  test_api.py  test_api2.py
dev_assistant/: __init__.py  api.py  execution_types.py  executor.py  healer.py  healing_loop.py  main.py  model_config.py  openrouter_client.py  prompts.py  utils.py  web_server.py
dev_assistant/auth/: __init__.py  api_key_auth.py  rate_limiter.py
dev_assistant/db/: __init__.py  database.py
dev_assistant/hitl/: __init__.py  review_manager.py
dev_assistant/sandbox/: Dockerfile  SANDBOX_SETUP.md  __init__.py  docker_executor.py  sandbox_config.py
dev_assistant/training/: __init__.py  data_collector.py  dataset_builder.py  finetune_manager.py  model_selector.py  train.py
examples/v1_pong_game/: ai.js  index.html  main.js  shared_deps.md  style.css
output/: index.html  script.js  shared_deps.md  style.css  styles.css  unicode_test.txt
smol_dev/: __init__.py  api.py  main.py  openrouter_client.py
v0/: code2prompt.py  constants.py  debugger.py  debugger_no_modal.py  main.py  main_no_modal.py  readme.md  utils.py  v0_readme.md
v0/code2prompt/: code2prompt-gpt3.md  code2prompt-gpt4.md
v0/code2prompt2code/: background.js  content_script.js  popup.html  popup.js  shared_dependencies.md  styles.css
v0/exampleChromeExtension/: background.js  content_script.js  popup.html  popup.js  prompt used for this extension.md  shared_dependencies.md  styles.css
v0/static/: readme.md
